--- a/Github_TFM.Rmd
+++ b/Github_TFM.Rmd
@@ -1,35 +1,15 @@
 ---
-title: "distill con github"
-description: |
-  
-author:
-  - name: Diego MP González ()
-    affiliation_url: 
-date: "`r Sys.Date()`"
-output:
-    distill::distill_article:
-        fig_caption: false
-        highlight: kate
-        colorlinks: true
-        code_folding: true
-        toc: true 
-        toc_depth: 3
-        
+title: "TFM"
+author: "Diego MP Gonzalez"
+date: "2023-09-04"
+output: github_document
 ---
 
-```{r setup, include = FALSE}
-# Ajustes comunes de los chunk
-knitr::opts_chunk$set(fig.width = 9, fig.asp = 1, out.width = "50%",
-                      message = FALSE, warning = FALSE,
-                      echo = TRUE,res = 400,cache = FALSE)#,
-                      #cache.extra = 1)#reset cache globalmente
-rm(list = ls())
-cat("\f") #.BORRAR CONSOLA CTRL+L
-##TOC START----
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
-## R Markdown con distill
+## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
@@ -39,3 +19,12 @@ When you click the **Knit** button a document will be generated that includes bo
 summary(cars)
 ```
 
+## Including Plots
+
+You can also embed plots, for example:
+
+```{r pressure, echo=FALSE}
+plot(pressure)
+```
+
+Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
