--- a/Github_TFM.Rmd
+++ b/Github_TFM.Rmd
@@ -1,12 +1,32 @@
 ---
-title: "TFM"
-author: "Diego MP Gonzalez"
-date: "2023-09-04"
-output: github_document
+title: "distill (github)"
+description: |
+  Breve
+author:
+  - name: Diego Manuel Parra González (DNI 51424148-N)
+    affiliation: Universidad Complutense de Madrid
+    affiliation_url: 
+date: "`r Sys.Date()`"
+output:
+    distill::distill_article:
+        fig_caption: false
+        highlight: kate
+        colorlinks: true
+        code_folding: true
+        toc: true 
+        toc_depth: 3
+        
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r setup, include = FALSE}
+# Ajustes comunes de los chunk
+knitr::opts_chunk$set(fig.width = 9, fig.asp = 1, out.width = "50%",
+                      message = FALSE, warning = FALSE,
+                      echo = TRUE,res = 400,cache = FALSE)#,
+                      #cache.extra = 1)#reset cache globalmente
+rm(list = ls())
+cat("\f") #.BORRAR CONSOLA CTRL+L
+##TOC START----
 ```
 
 ## R Markdown
@@ -19,12 +39,3 @@ When you click the **Knit** button a document will be generated that includes bo
 summary(cars)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
